manifests/kustomize/istio-issuer.yaml
#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: autoscale-go
#  namespace: istio-system
#spec:
#  secretName: autoscale-go
#  issuerRef:
#    name: letsencrypt-http01-issuer
#    kind: ClusterIssuer
#  commonName: autoscale-go.default.cr.webinf.info
#  dnsNames:
#  - autoscale-go.default.cr.webinf.info
---

# Not created automatically in add-on !

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateay
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
